--- a/css/contact.css
+++ b/css/contact.css
@@ -84,12 +84,11 @@
   margin-right: 5%;
   background-color: #2b7f8d;
   width: 80%;
-  position: relative;
-  top: 80%;
   height: 70px;
   text-align: center;
   cursor: pointer;
 }
+
 .cont{
   letter-spacing: -0.4px;
   color: #ffffff;
@@ -119,4 +118,10 @@
     left: 6%!important;
     margin-bottom: 20px;
   }
+}
+
+.form-group{
+  margin-top: 2em;
+  width: 80%;
+  margin-left: 10%;
 }
