--- a/css/index.css
+++ b/css/index.css
@@ -96,11 +96,11 @@ nav{
 }
 
 
-.parallax { 
+.parallax {
     /* The image used */
     background-image: url("../img/1440x662.jpg");
     /* Set a specific height */
-    height: 500px; 
+    height: 500px;
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
@@ -114,7 +114,7 @@ nav{
 }
 
 .contact-body1{
-  font-size: 18px!important;
+  font-size: 18px;
   font-weight: lighter!important;
 }
 
@@ -161,4 +161,17 @@ nav{
 
 .textservicio li{
   font-size: 15px;
+}
+
+@media (max-width: 768px) {
+  .contact-body1{
+    font-size: 14px!important;
+    padding-right: 1em;
+    width: 100%!important;
+  }
+  .banner-box{
+    font-size: 12px;
+    padding-left:  0px!important;
+    padding-right: 1em;
+  }
 }
